# Persuasion_Diplomacy

./: .gitignore  README.md  analyze_rl_json.py  config.py  csv_to_rl_json.py  docker-compose.yaml  experiment_runner.py  lm_game.py  models.py  pyproject.toml  requirements.txt  run.sh
.github/: CODEOWNERS
.github/workflows/: playwright.yml  test.yml
ai_animation/: index.html  package-lock.json  tsconfig.json
ai_animation/src/: backgroundAudio.test.ts  backgroundAudio.ts  config.ts  domElements.ts  events.ts  gameState.ts  logger.ts  main.ts  phase.ts  speech.ts  style.css
ai_diplomacy/: agent.py  clients.py  diary_logic.py  formatter.py  game_history.py  game_logic.py  initialization.py  narrative.py  negotiations.py  planning.py  possible_order_context.py  prompt_constructor.py  utils.py
ai_diplomacy/prompts/: context_prompt.txt
ai_diplomacy/prompts_simple/: austria_system_prompt.txt  context_prompt.txt  diary_consolidation_prompt.txt  england_system_prompt.txt  france_system_prompt.txt  germany_system_prompt.txt  italy_system_prompt.txt  negotiation_diary_prompt.txt  order_instructions_movement_phase.txt  russia_system_prompt.txt  state_update_prompt.txt  turkey_system_prompt.txt
analysis/: 1_make_longform_orders_data.py  2_make_convo_data.py  3_make_phase_data.py  analysis_constants.py  analysis_helpers.py  make_all_analysis_data.py  make_longform_orders_data.py  p1_make_longform_orders_data.py  p2_make_convo_data.py  p3_make_phase_data.py  statistical_game_analysis.py
bot_client/: config.py
experiments/: analyze_rl_json.py
tests/: test_models.py
(+56 files in other folders)
